--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
-.divider {
+.header {
+  padding: 0 50px;
   border-bottom: 1px solid #E2E4E5;
+  position: sticky;
+  top: 0;
+  background: white;
+  z-index: 100;
 }
 .header-row {
   padding-top: 10px;
@@ -58,5 +63,119 @@ button:focus {
 }
 .cform-footer-submit {
   margin-left: 10px;
-  padding: 12px 32px;
+  padding: 12px 32px !important;
+}
+
+.image-cover-wrapper {
+  position: relative;
+}
+
+.image-cover {
+  width: 100%;
+  height: 180px;
+  background: #DDDBD7;
+  opacity: 0.5;
+}
+
+.image-cover-center {
+  background: #F1F1F1;
+  font-family: 'avenir-medium' !important;
+  font-size: 16px;
+  color: #373530;
+  padding: 5px;
+  text-align: center;
+  position: absolute;
+  left: calc(50% - 85px);
+  top: 75px;
+  border-radius: 4px;
+}
+
+.logo-cover-wrapper {
+  position: relative;
+  margin-bottom: 20px;
+  margin-top: -65px;
+  margin-left: 65px;
+}
+
+.image-logo {
+  width: 100px;
+  height: 100px;
+  background: #DDDBD7;
+}
+
+.image-logo-center {
+  position: absolute;
+  left: 34px;
+  top: 34px;
+  border-radius: 4px;
+}
+
+.preview-content {
+  padding-left: 100px;
+  font-family: 'avenir-medium' !important;
+}
+
+.preview-title {
+  font-family: 'avenir-medium' !important;
+  font-size: 42px;
+}
+
+.preview-description {
+  font-family: 'avenir-medium' !important;
+  font-size: 16px;
+}
+
+.control-sq {
+  width: 400px !important;
+  padding: 15px 40px 15px 15px !important;
+  margin-top: 8px;
+  margin-right: 8px;
+}
+
+.icon-sq {
+  position: absolute;
+  top: 28px;
+  right: 20px;
+}
+
+.control-wrapper {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.control-required {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: #E2E4E5;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.choice-badge {
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.mc-item {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.mc-item-badge {
+  display: flex;
+  width: 32px;
+  height: 32px;
+  align-items: center;
+  justify-content: center;
+  background: #373530;
+  color: white;
+  border-radius: 6px;
+  margin-right: 13px;
 }
